# Lemma

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml
cli/: Cargo.toml  README.md
cli/benches/: engine_profile.rs  http_evaluate.rs
cli/src/: error_formatter.rs  formatter.rs  interactive.rs  main.rs  mcp.rs  response.rs  server.rs
cli/src/mcp/: mod.rs  server.rs
cli/tests/integrations/: examples.rs  interactive.rs  mcp.rs  mod.rs  run.rs  server.rs
cli/tests/integrations/examples/: 01_simple_data.lemma  01_simple_facts.lemma  02_rules_and_unless.lemma  03_spec_references.lemma  (+12 more)
engine/: Cargo.toml  README.md
engine/fuzz/: .gitignore  Cargo.toml  README.md
engine/fuzz/fuzz_targets/: fuzz_data_bindings.rs  fuzz_deeply_nested.rs  fuzz_expressions.rs  fuzz_fact_bindings.rs  fuzz_literals.rs  fuzz_parser.rs
engine/lemma-lsp/: Cargo.toml
engine/lemma-lsp/src/: diagnostics.rs  main.rs  server.rs
engine/lsp/: Cargo.toml  DIAGNOSTICS_FLOW.md  README.md
engine/lsp/editors/: README.md
engine/lsp/src/: browser.rs  diagnostics.rs  document_links.rs  lib.rs  main.rs  registry.rs  semantic_tokens.rs  server.rs  spec_links.rs  workspace.rs
engine/src/: engine.rs  error.rs  lib.rs  limits.rs  literals.rs  registry.rs  spec_id.rs  spec_set_id.rs  wasm.rs
engine/src/computation/: arithmetic.rs  comparison.rs  datetime.rs  units.rs
engine/src/evaluation/: explanation.rs  expression.rs  mod.rs  operations.rs  response.rs
engine/src/formatting/: mod.rs
engine/src/inversion/: constraint.rs  derived.rs  domain.rs  mod.rs  solve.rs  target.rs  world.rs
engine/src/parsing/: ast.rs  expressions.rs  facts.rs  lemma.pest  lexer.rs  literals.rs  meta.rs  mod.rs  parser.rs  rules.rs  source.rs  types.rs
engine/src/planning/: content_hash.rs  discovery.rs  execution_plan.rs  fingerprint.rs  graph.rs  mod.rs  semantics.rs  slice_interface.rs  spec_set.rs  temporal.rs  types.rs  validation.rs  version_sort.rs
engine/src/serialization/: json.rs  mod.rs  msgpack.rs  protobuf.rs
engine/src/tests/: ast.rs  data_bindings.rs  engine.rs  error.rs  fact_bindings.rs  mod.rs  serializers.rs
engine/syntax/: README.md  codemirror6.js  highlight.html  highlight.js  package.json  prism.html
engine/tests/: arithmetic_type_combinations.rs  bdd_consensus.rs  bdd_partial_simplification.rs  bdd_simplification.rs  branch_aware_missing_data.rs  coffee_order.rs  cross_document_references.rs  cross_spec_interface_contract.rs  cross_spec_references.rs  data_binding_type_validation.rs  data_literals_coverage.rs  data_nested_bindings_coverage.rs  data_references.rs  data_type_declarations_coverage.rs  data_with_values_contract.rs  datetime_edge_cases.rs  datetime_edge_hunting.rs  datetime_sugar.rs  documentation_examples.rs  end_to_end.rs  equal_operator.rs  error_messages.rs  explanation_e2e.rs  expression_syntax.rs  fact_binding_type_validation.rs  fingerprint.rs  formatter.rs  fuzz_api_surface.rs  inline_type_imports.rs  integration_comprehensive.rs  integration_examples.rs  inversion.rs  inversion_comparison_operators.rs  inversion_constraint_linear.rs  inversion_display_serialize.rs  inversion_enhancements.rs  inversion_error_messages.rs  inversion_guards.rs  inversion_math_ops.rs  inversion_missing_cases.rs  (+40 more)
engine/tests/common/: mod.rs
engine/wasm/: README.md  build.js  index.html  lemma-entry.js  lemma.d.ts  lsp-client.js  lsp-entry.js  monaco.js  test.js
lemma/: Cargo.toml  README.md
lemma-lsp/: Cargo.toml
lemma-lsp/src/: document_links.rs  registry.rs  workspace.rs
lemma/src/: analysis.rs  ast.rs  engine.rs  error.rs  lib.rs  limits.rs  operation_result.rs  proof.rs  response.rs  semantic.rs  source_location.rs  validator.rs  wasm.rs
lemma/src/computation/: algebra.rs  arithmetic.rs  comparison.rs  datetime.rs  mod.rs  units.rs
lemma/src/evaluation/: datetime.rs  expression.rs  mod.rs  operations.rs  proof.rs  response.rs  units.rs
lemma/src/evaluator/: context.rs  expression.rs  mod.rs  rules.rs
lemma/src/inversion/: algebra.rs  boolean.rs  collapse.rs  constraint.rs  domain.rs  domain_extraction.rs  domain_ops.rs  expansion.rs  hydration.rs  inverter.rs  mod.rs  shape.rs  solve.rs  solver.rs  target.rs  world.rs
lemma/src/parser/: expressions.rs  facts.rs  literals.rs  mod.rs  rules.rs
lemma/src/parsing/: ast.rs  expressions.rs  facts.rs  lemma.pest  literals.rs  mod.rs  rules.rs  source.rs  types.rs  units.rs
lemma/src/planning/: execution_plan.rs  graph.rs  mod.rs  semantics.rs  types.rs  validation.rs
lemma/src/serialization/: json.rs  mod.rs  msgpack.rs  protobuf.rs
lemma/src/tests/: analysis.rs  ast.rs  edge_cases.rs  engine.rs  error.rs  expression_parsing.rs  fact_overrides.rs  literal_parsing.rs  mod.rs  rules.rs  semantic.rs  serializers.rs  unit_parsing.rs
lemma/syntax/: README.md  codemirror6.js  highlight.js  lemma.tmLanguage.json  monaco.js  prism.js
lemma/tests/: algebraic_edge_cases.rs  bdd_consensus.rs  bdd_partial_simplification.rs  bdd_simplification.rs  coffee_order.rs  cross_document_references.rs  datetime_edge_cases.rs  document_reference_bugs.rs  documentation_examples.rs  end_to_end.rs  equal_operator.rs  error_messages.rs  expression_syntax.rs  fact_binding_type_validation.rs  fact_override_type_validation.rs  get_valid_domain.rs  get_valid_domain_multiple.rs  inline_type_imports.rs  integration_comprehensive.rs  integration_examples.rs  invalid_type_validation.rs  inversion.rs  inversion_comparison_operators.rs  inversion_constraint_linear.rs  inversion_display_serialize.rs  inversion_enhancements.rs  inversion_error_messages.rs  inversion_guards.rs  inversion_math_ops.rs  inversion_missing_cases.rs  inversion_real_world.rs  inversion_recursive_expansion.rs  inversion_rule_reference_demo.rs  inversion_smoke.rs  json_serializer.rs  math_ops.rs  missing_fact_propagation.rs  modulo_power.rs  multi_unknown_constraints.rs  nested_document_references.rs  (+23 more)
lemma/wasm/: README.md  index.html  test.js
openapi/: Cargo.toml
openapi/src/: lib.rs
(+52 files in other folders)
