[workspace]
resolver = "3"
members = [
    "cli",
    "engine",
    "engine/lsp",
    "openapi",
]
default-members = ["cli"]
exclude = ["engine/fuzz"]

[workspace.package]
version = "0.8.2"
edition = "2021"
authors = ["benrogmans <ben@amrai.nl>"]
description = "A language that means business."
license = "Apache-2.0"
repository = "https://github.com/benrogmans/lemma"

[workspace.lints.rust]
dead_code = "deny"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
rust_decimal = { version = "1.33", features = ["serde"] }
