[package]
name = "lemma-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
lemma = { package = "lemma-engine", version = "0.7.4", path = "../engine" }
lemma-openapi = { version = "0.7.4", path = "../openapi" }
clap.workspace = true
anyhow.workspace = true
ariadne.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
walkdir = "2.4"
super-table = { version = "1.1.1", features = ["custom_styling"] }
inquire = { version = "0.9", features = ["date"] }
rust_decimal = "1.36"
strip-ansi-escapes = "0.2"

# Server dependencies
axum.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
notify-debouncer-mini = "0.5"

[lints.rust]
dead_code = "deny"

[features]
default = ["mcp"]
mcp = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.4"
