[package]
name = "lemma-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
# Exact version: avoid cargo install resolving a newer lemma-engine patch that may be API-incompatible.
lemma = { package = "lemma-engine", version = "=0.8.5", path = "../engine", default-features = false }
lemma-openapi = { version = "=0.8.5", path = "../openapi" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ariadne = "0.6"
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
walkdir = "2.4"
super-table = { version = "1.1.1", features = ["custom_styling"] }
inquire = { version = "0.9", features = ["date"] }
rust_decimal.workspace = true
strip-ansi-escapes = "0.2"

# Server dependencies
axum = "0.8.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
indexmap = { version = "2.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"
notify-debouncer-mini = "0.7"

[lints]
workspace = true

[features]
default = ["registry"]
registry = ["lemma/registry"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "http_evaluate"
harness = false

[[bench]]
name = "engine_profile"
harness = false
