[package]
name = "lemma-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage = "https://github.com/lemma/lemma"
documentation = "https://docs.rs/lemma-engine"
readme = "README.md"
keywords = ["logic", "rules", "declarative", "dsl", "rust"]
categories = ["parser-implementations", "development-tools"]
include = ["/src/**", "/tests/**", "/README.md", "/LICENSE"]

[lib]
name = "lemma"
crate-type = ["cdylib", "rlib"]

[dependencies]
postcard = { version = "1", features = ["alloc"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
indexmap = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
boolean_expression = "0.4"
async-trait = "0.1"
reqwest = { version = "0.13", optional = true, default-features = false, features = ["rustls"] }

[features]
default = ["registry"]
registry = ["reqwest"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
serde-wasm-bindgen = "0.6"

[lints]
workspace = true

[dev-dependencies]
proptest = "1.4"
insta = "1.34"
tokio.workspace = true