[package]
name = "lemma-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Lemma"
license.workspace = true
repository.workspace = true

[[bin]]
name = "lemma-lsp"
path = "src/main.rs"

[dependencies]
lemma = { package = "lemma-engine", version = "0.7.3", path = "../lemma" }
tower-lsp = "0.20"
tokio = { workspace = true }
serde_json.workspace = true
