[package]
name = "lemma-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A language that means business."
homepage = "https://github.com/benrogmans/lemma"
documentation = "https://docs.rs/lemma-engine"
readme = "README.md"
keywords = ["logic", "rules", "declarative", "dsl", "rust"]
categories = ["parser-implementations", "development-tools"]

[lib]
name = "lemma"
crate-type = ["cdylib", "rlib"]

[dependencies]
pest.workspace = true
pest_derive.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
strum = "0.26"
strum_macros = "0.26"
indexmap = { version = "2.0", features = ["serde"] }
boolean_expression = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

[features]
planning_internal_tests = []

[dev-dependencies]
proptest = "1.4"
insta = "1.34"