[package]
name = "lemma-openapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI 3.1 specification generator for Lemma documents."

[dependencies]
lemma = { package = "lemma-engine", version = "0.7.6", path = "../engine" }
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true
