[package]
name = "lemma-openapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI 3.1 specification generator for Lemma specs."

[dependencies]
# Exact version: avoid resolving a newer lemma-engine patch that may be API-incompatible.
lemma = { package = "lemma-engine", version = "=0.8.0", path = "../engine" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true
