[package]
name = "lemma-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.lemma]
package = "lemma-engine"
path = ".."

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_expressions"
path = "fuzz_targets/fuzz_expressions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_literals"
path = "fuzz_targets/fuzz_literals.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_deeply_nested"
path = "fuzz_targets/fuzz_deeply_nested.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_data_bindings"
path = "fuzz_targets/fuzz_data_bindings.rs"
test = false
doc = false
bench = false
