[package]
name = "lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Lemma"
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lsp"
path = "src/main.rs"

[lints.rust]
dead_code = "deny"

[features]
default = []

[dependencies]
lemma = { package = "lemma-engine", version = "0.7.4", path = "..", default-features = false }
async-trait = "0.1"
serde_json.workspace = true

# Native: engine with registry (LemmaBase) + tokio + tower-lsp with stdio transport
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.lemma]
package = "lemma-engine"
version = "0.7.4"
path = ".."
features = ["registry"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-std", "time"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tower-lsp]
version = "0.20"
features = ["runtime-tokio"]

# WASM: engine with registry (LemmaBase + gloo_net fetch) + minimal tokio + tower-lsp
[target.'cfg(target_arch = "wasm32")'.dependencies.lemma]
package = "lemma-engine"
version = "0.7.4"
path = ".."
features = ["registry"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros", "sync", "io-util", "time"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tower-lsp]
version = "0.20"
default-features = false
features = ["runtime-agnostic"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WritableStream"] }
wasm-streams = "0.2"
futures = "0.3"
console_error_panic_hook = "0.1"
